# NLP-Resume-Matcher-

./: .gitignore  README.md  app.py  main.py  match.ipynb  matcher.py  pyproject.toml  requirements.txt
