[project]
name = "resume-matcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "nltk>=3.9.4",
    "pypdf2>=3.0.1",
    "pyresparser>=1.0.6",
    "scikit-learn>=1.8.0",
    "spacy>=3.8.14",
    "streamlit>=1.57.0",
]
